Closed Bug 808834 Opened 12 years ago Closed 12 years ago

Fix the length check when inlining a new dependent string

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla19

People

(Reporter: terrence, Assigned: terrence)

References

Details

Attachments

(1 file)

Attached patch v0Splinter Review
It looks like I messed up when crafting the patch in bug 780765.  This trivial fix should make it inline more things.  Carrying over Luke's rs from bug 808483.
Attachment #678518 - Flags: review+
https://hg.mozilla.org/mozilla-central/rev/8d3c629e056a
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: