Bug 808834 - Fix length check when uninlining new dependent strings; rs=luke